# graph-isomorphism

./: .gitignore  CMakeLists.txt  README.md  algorithms.h  console.c  console.h  graph.c  main.c  readme.md  readme.txt  run_all_tests.sh  utils.c  utils.h
Doc/: how_to_compile_and_run_program.txt
Examples/: 01_identical_triangles.txt  03_perfect_subgraph.txt  04_single_vertex.txt  07_directed_asymmetric.txt  08_no_isomorphism_possible.txt  09_star_graph.txt  10_complete_k4.txt  12_medium_dense.txt  16_two_components_g.txt  compy.txt  example_descriptions.txt  graphs.txt
Source/: CMakeLists.txt  Makefile  graph.h
Source/test/: plot_benchmark.py  (+2 more)
algorithms/: isomorphism.c  isomorphism.h  minimal_extension.c  minimal_extension.h  minimal_extension_approximation.c  minimal_extension_approximation.h  product_graph.c
data/: 01_identical_triangles.txt  03_perfect_subgraph.txt  04_single_vertex.txt  05_self_loops.txt  06_multigraph.txt  07_directed_asymmetric.txt  08_no_isomorphism_possible.txt  09_star_graph.txt  10_complete_k4.txt  11_medium_sparse.txt  12_medium_dense.txt  13_bipartite.txt  14_path_in_cycle.txt  15_heavy_multigraph.txt  16_two_components_g.txt  17_clique_k5_into_k6.txt  18_larger_test.txt  19_worst_case_greedy.txt  20_empty_g.txt  compy.txt  graphs.txt  triangle-square.txt
results/: ext_approx_results.txt  ext_exact_results.txt  iso_approx_results.txt  iso_exact_results.txt  summary.txt
test/: benchmark_linear.sh  generate_tests.fish  generate_tests.sh  graph_gen  graph_gen.c  graph_gen.py  iso_approx_sanity_check.sh  run_tests.fish  run_tests.sh
(+342 files in other folders)
